--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li><a href="#certifications">Certificates</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="/Front-end/Front-end/Front-end/index.html">The health</a></li>
+                    <li><a href="./Front-end/Front-end/Front-end/index.html">The health</a></li>
                 </ul>
             </nav>
 
