Web design documentation

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                     <li><a href="#certifications">Certificates</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="./Front-end/Front-end/Front-end/index.html">The health</a></li>
+                    <!-- <li><a href="./Front-end/Front-end/Front-end/index.html">The health</a></li> -->
+
+                    <li><a href="/web-design.html">Web Design</a></li>
                 </ul>
             </nav>
 
